# idevicepair

./: Cargo.toml  README.md
.github/workflows/: build.ymal  main.yml
idevice/src/: lib.rs
pair_gui/: Cargo.toml
pair_gui/src/: main.rs  prefs.rs  types.rs  util.rs
pair_gui/src/ui/: app.rs  mod.rs
pair_gui/src/worker/: afc.rs  common.rs  device.rs  mod.rs  worker_loop.rs
pairings/: 00008140-0004453E0402201C.mobiledevicepairing
tools/: Cargo.toml
tools/src/: pair.rs  pair_gui.rs
