[package]
name = "pair_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
idevice = { path = "../idevice", features = ["usbmuxd", "pair"] }
eframe = "0.31"
egui   = "0.31"
crossbeam = "0.8"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
plist = "1.3"
env_logger = "0.10"
futures = "0.3"
