[package]
name        = "idevice-tools"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["Jackson Coxson"]
description = "Rust binary tools to interact with services on iOS devices."
repository  = "https://github.com/jkcoxson/idevice"
keywords    = ["lockdownd", "ios", "pair", "gui", "utilities"]

# 
# All of your tools:
# 
[[bin]]
name = "ideviceinfo"
path = "src/ideviceinfo.rs"

[[bin]]
name = "heartbeat_client"
path = "src/heartbeat_client.rs"

[[bin]]
name = "instproxy"
path = "src/instproxy.rs"

[[bin]]
name = "mounter"
path = "src/mounter.rs"

[[bin]]
name = "core_device_proxy_tun"
path = "src/core_device_proxy_tun.rs"

[[bin]]
name = "idevice_id"
path = "src/idevice_id.rs"

[[bin]]
name = "process_control"
path = "src/process_control.rs"

[[bin]]
name = "dvt_packet_parser"
path = "src/dvt_packet_parser.rs"

[[bin]]
name = "remotexpc"
path = "src/remotexpc.rs"

[[bin]]
name = "debug_proxy"
path = "src/debug_proxy.rs"

[[bin]]
name = "misagent"
path = "src/misagent.rs"

[[bin]]
name = "location_simulation"
path = "src/location_simulation.rs"

[[bin]]
name = "afc"
path = "src/afc.rs"

[[bin]]
name = "amfi"
path = "src/amfi.rs"

[[bin]]
name = "pair_gui"
path = "src/pair_gui.rs"


[dependencies]
idevice        = { path = "../idevice", features = ["full"] }
tokio          = { version = "1.43", features = ["macros", "rt-multi-thread", "time", "io-util"] }
log            = "0.4"
env_logger     = "0.11"
uuid           = { version = "1", features = ["v4"] }
plist          = "1.5"      # For handling plist values in device info


crossbeam      = "0.8"        # for crossbeam::channel::{unbounded, }
eframe         = "0.31"
rfd            = "0.15"       # FileDialog for folder picking
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"         # prefs read/write
directories    = "4.0"         # ProjectDirs for prefs file

clap           = { version = "4.5", optional = true }

[profile.dev.package.idevice]
opt-level = 3

[profile.dev]
opt-level = 3

[package.metadata.bundle]
# The name of the generated macOS application
name              = "idevice-tools"
# Reverse‑DNS identifier for your app bundle
identifier        = "com.yourdomain.idevice-tools"
# Path(s) to your .icns icon file(s)
icon              = ["assets/icon.icns"]
# Extra files/resources to copy into the .app bundle
resources         = ["resources/**"]
# Version string (can mirror package.version)
version           = "0.1.0"
# One‑line summary for macOS’s Info.plist
short_description = "Rust tools for interacting with iOS devices"
# Longer description for your users
long_description  = """
  A suite of Rust-based command‑line and GUI utilities to work
  with lockdownd, pairing, and other iOS services.
"""
